# hdf5-examples

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile.am  Makefile.in  README  README.md  Using_CMake.txt  configure  configure.ac  configure.in  makefile.am  makefile.in
1_10/C/: CMakeLists.txt  makefile.in
1_10/C/H5D/: CMakeLists.txt  h5ex_d_nbit.test  h5ex_d_sofloat.test  h5ex_d_soint.c  h5ex_d_transform.test  makefile  makefile.am  makefile.in  maketestref.sh  test.sh
1_10/C/H5G/: CMakeLists.txt  h5ex_g_intermediate.c  h5ex_g_iterate.c  h5ex_g_traverse.c  h5ex_g_visit.c  h5ex_g_visit.test  makefile.am  makefile.in  maketestref.sh  test.sh
1_10/C/H5T/: CMakeLists.txt  h5ex_t_arrayatt.test  h5ex_t_cmpdatt.test  h5ex_t_enum.test  h5ex_t_enumatt.test  h5ex_t_opaque.test  h5ex_t_regrefatt.test  h5ex_t_vlstring.test  makefile.am  makefile.in  test.sh
1_10/C/Performance/: CMakeLists.txt  makefile.am
1_10/FORTRAN/: CMakeLists.txt  makefile.in
1_10/FORTRAN/H5D/: CMakeLists.txt  Fortran_sourcefiles.cmake  h5ex_d_chunk.f90  h5ex_d_chunk.test  h5ex_d_compact.f90  h5ex_d_compact.test  h5ex_d_hyper.test  h5ex_d_rdwr_kind.f90  h5ex_d_transform.test  makefile.am  makefile.in  maketestref.sh  test.sh  test.sh.in
1_10/FORTRAN/H5G/: CMakeLists.txt  h5ex_g_corder.test  makefile.am  makefile.in  maketestref.sh  test.sh
1_10/FORTRAN/H5T/: CMakeLists.txt  h5ex_t_array_F03.test  h5ex_t_arrayatt_F03.test  h5ex_t_bit_F03.f90  h5ex_t_cmpd_F03.f90  h5ex_t_cmpd_F03.test  h5ex_t_cmpdatt_F03.test  h5ex_t_enumatt_F03.test  h5ex_t_float_F03.f90  h5ex_t_floatatt_F03.f90  h5ex_t_int_F03.test  h5ex_t_intatt_F03.test  h5ex_t_objref_F03.test  h5ex_t_objrefatt_F03.test  h5ex_t_opaqueatt_F03.test  h5ex_t_regref_F03.f90  h5ex_t_regref_F03.test  h5ex_t_regrefatt_F03.test  h5ex_t_stringC_F03.test  h5ex_t_stringCatt_F03.test  makefile.am  makefile.in  maketestref.sh  test.sh
1_6/: CMakeLists.txt  Using_CMake.txt  makefile.in
1_6/C/: makefile.am  makefile.in
1_6/C/H5D/: h5ex_d_alloc.c  h5ex_d_checksum.c  h5ex_d_chunk.c  h5ex_d_chunk.test  h5ex_d_compact.c  h5ex_d_compact.test  h5ex_d_extern.c  h5ex_d_fillval.c  h5ex_d_gzip.c  h5ex_d_hyper.c  h5ex_d_rdwr.c  h5ex_d_shuffle.c  h5ex_d_szip.c  h5ex_d_szip.test  h5ex_d_unlimadd.c  h5ex_d_unlimadd.test  h5ex_d_unlimgzip.c  h5ex_d_unlimgzip.test  h5ex_d_unlimmod.c  h5ex_d_unlimmod.test  makefile.am  makefile.in  maketestref.sh  test.sh  test.sh.in
1_6/C/H5G/: CMakeLists.txt  C_sourcefiles.cmake  h5ex_g_iterate.c  h5ex_g_traverse.c  makefile.am  makefile.in  maketestref.sh  test.sh  test.sh.in
1_6/C/H5T/: h5ex_t_array.c  h5ex_t_array.test  h5ex_t_arrayatt.c  h5ex_t_arrayatt.test  h5ex_t_bit.c  h5ex_t_bitatt.c  h5ex_t_bitatt.test  h5ex_t_cmpd.c  h5ex_t_cmpd.test  h5ex_t_cmpdatt.c  h5ex_t_cmpdatt.test  h5ex_t_commit.c  h5ex_t_convert.c  h5ex_t_cpxcmpd.c  h5ex_t_cpxcmpdatt.c  h5ex_t_enum.c  h5ex_t_enum.test  h5ex_t_enumatt.c  h5ex_t_enumatt.test  h5ex_t_float.c  h5ex_t_floatatt.c  h5ex_t_floatatt.test  h5ex_t_int.c  h5ex_t_int.test  h5ex_t_intatt.c  h5ex_t_intatt.test  h5ex_t_objref.c  h5ex_t_objref.test  h5ex_t_objrefatt.c  h5ex_t_objrefatt.test  h5ex_t_opaque.c  h5ex_t_opaqueatt.c  h5ex_t_opaqueatt.test  h5ex_t_regref.c  h5ex_t_regref.test  h5ex_t_regrefatt.c  h5ex_t_regrefatt.test  h5ex_t_string.c  h5ex_t_stringatt.c  h5ex_t_stringatt.test  (+11 more)
1_6/config/cmake/: HDFExampleMacros.cmake
1_6/config/toolchain/: GCC.cmake  PGI.cmake  build32.cmake  crayle.cmake  intel.cmake  mingw64.cmake
1_8/: CMakeLists.txt  CTestConfig.cmake  Using_CMake.txt  makefile.in
1_8/C/: CMakeLists.txt  makefile.in
1_8/C/H5D/: CMakeLists.txt  h5ex_d_alloc.c  h5ex_d_alloc.test  h5ex_d_checksum.c  h5ex_d_checksum.test  h5ex_d_chunk.c  h5ex_d_compact.c  h5ex_d_extern.c  h5ex_d_extern.test  h5ex_d_fillval.c  h5ex_d_fillval.test  h5ex_d_gzip.c  h5ex_d_gzip.test  h5ex_d_hyper.c  h5ex_d_hyper.test  h5ex_d_nbit.c  h5ex_d_nbit.test  h5ex_d_rdwr.c  h5ex_d_rdwr.test  h5ex_d_shuffle.c  h5ex_d_shuffle.test  h5ex_d_sofloat.c  h5ex_d_sofloat.test  h5ex_d_soint.c  h5ex_d_soint.test  h5ex_d_szip.c  h5ex_d_transform.c  h5ex_d_transform.test  h5ex_d_unlimadd.c  h5ex_d_unlimgzip.c  h5ex_d_unlimmod.c  makefile.am  makefile.in  maketestref.sh  test.sh  test.sh.in
1_8/C/H5Filters/: CMakeLists.txt
1_8/C/H5G/: CMakeLists.txt  h5ex_g_compact.c  h5ex_g_compact.test  h5ex_g_corder.c  h5ex_g_corder.test  h5ex_g_create.c  h5ex_g_intermediate.c  h5ex_g_iterate.c  h5ex_g_phase.c  h5ex_g_phase.test  h5ex_g_traverse.c  h5ex_g_visit.c  makefile.am  makefile.in  maketestref.sh  test.sh
1_8/C/H5T/: CMakeLists.txt  h5ex_t_array.c  h5ex_t_arrayatt.c  h5ex_t_arrayatt.test  h5ex_t_bit.c  h5ex_t_bit.test  h5ex_t_bitatt.c  h5ex_t_bitatt.test  h5ex_t_cmpd.c  h5ex_t_cmpdatt.c  h5ex_t_cmpdatt.test  h5ex_t_commit.c  h5ex_t_commit.test  h5ex_t_convert.c  h5ex_t_cpxcmpd.c  h5ex_t_cpxcmpd.test  h5ex_t_cpxcmpdatt.c  h5ex_t_cpxcmpdatt.test  h5ex_t_enum.c  h5ex_t_enumatt.c  h5ex_t_enumatt.test  h5ex_t_float.c  h5ex_t_float.test  h5ex_t_floatatt.c  h5ex_t_floatatt.test  h5ex_t_int.c  h5ex_t_intatt.c  h5ex_t_intatt.test  h5ex_t_objref.c  h5ex_t_objref.test  h5ex_t_objrefatt.c  h5ex_t_objrefatt.test  h5ex_t_opaque.c  h5ex_t_opaque.test  h5ex_t_opaqueatt.c  h5ex_t_opaqueatt.test  h5ex_t_regref.c  h5ex_t_regref.test  h5ex_t_regrefatt.c  h5ex_t_regrefatt.test  (+15 more)
1_8/C/Performance/: CMakeLists.txt  h5slab.h  makefile.am
1_8/FORTRAN/: CMakeLists.txt  makefile.in
1_8/FORTRAN/H5D/: CMakeLists.txt  Fortran_sourcefiles.cmake  h5ex_d_alloc.f90  h5ex_d_alloc.test  h5ex_d_checksum.f90  h5ex_d_checksum.test  h5ex_d_chunk.f90  h5ex_d_compact.f90  h5ex_d_extern.f90  h5ex_d_extern.test  h5ex_d_fillval.f90  h5ex_d_fillval.test  h5ex_d_gzip.f90  h5ex_d_gzip.test  h5ex_d_rdwr.f90  h5ex_d_rdwr.test  h5ex_d_rdwr_kind_F03.f90  h5ex_d_szip.f90  h5ex_d_unlimmod.f90  h5ex_d_unlimmod.test  makefile.am  makefile.in  maketestref.sh  test.sh  test.sh.in
1_8/FORTRAN/H5G/: CMakeLists.txt  h5ex_g_phase.f90  (+11 more)
examples/: CMakeLists.txt  Makefile.in
examples/C/: Makefile.am  Makefile.in
examples/FORTRAN/: Makefile.in
(+767 files in other folders)
